First pass admin dashboard working

--- a/server/src/dashboard_content/dashboard-content.html
+++ b/server/src/dashboard_content/dashboard-content.html
@@ -3,23 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>/*STYLES-CONTENT*/</style>
-    
     <script>/*SCRIPTS-CONTENT*/</script>
   </head>
   <body>
     <div class="caption">
-      <span class="border">THE SIRE</span><br>
-      <span class="border2">MILK TRACKER</span><br>
-      <span class="border3">/*TODAYS-DATE*/</span><br></br></br>
-      <span class="border2">/*AMOUNT-FED*/</span><br>
+      <span class="border">Bungle of the Year - 2023</span><br>
       <div id="inputContainer" class="inputContainer">
         <div>
-          <input type="text" id="amountField" placeholder="Amount Fed (in oz.)...">
-          <button class="submitBtn" onclick="submitGuestbookEntry()">Submit</button>
+          <span class="border2">Please enter your name:</span>
+          <input type="text" id="nameField" placeholder="Your Name...">
+          <button class="nameBtn" onclick="submitGuestbookEntry()">Submit</button>
         </div>
-      </div>
+      </div></br></br>
+      /*CURRENT-VIDEO-CONTENT*/
       </br></br>
-      /*ENTRIES-CONTENT*/
     </div>
   </body>
 </html>
