--- a/server/src/admin_dashboard_content/admin-dashboard-content.html
+++ b/server/src/admin_dashboard_content/admin-dashboard-content.html
@@ -6,11 +6,13 @@
     <script>/*SCRIPTS-CONTENT*/</script>
   </head>
   <body>
-    <h1>Bungles of the Year - 2023</h1>
+    <h1>Bungle of the Year - 2023</h1>
     <div class="pending">
-      <h2>Current Video</h2>
-      <iframe width='1280' height='720' src='https://medal.tv/clip/715814072/y3TRNYXNJGPnF5QO?loop=1&autoplay=1&muted=1&cta=1' frameborder='0' allow='autoplay' allowfullscreen class='medal-clip' id='cid715814072'></iframe>
-      /*ENTRIES-CONTENT*/
+      <h2>Current Video: /*TITLE-CONTENT*/</h2>
+      /*VIDEO-CONTENT*/
+      </br>
+      <button class="voteBtn" onclick="goToPrevVideo()">Previous</button>
+      <button class="voteBtn" onclick="goToNextVideo()">Next</button></br>
     </div>
   </body>
 </html>
