Finish first pass voting flow

--- a/server/src/dashboard_content/dashboard-content.html
+++ b/server/src/dashboard_content/dashboard-content.html
@@ -8,12 +8,8 @@
   <body>
     <div class="caption">
       <span class="border">Bungle of the Year - 2023</span><br>
-      <div id="inputContainer" class="inputContainer">
-        <div>
-          <span class="border2">Please enter your name:</span>
-          <input type="text" id="nameField" placeholder="Your Name...">
-          <button class="nameBtn" onclick="submitGuestbookEntry()">Submit</button>
-        </div>
+      <div id="nameContainer">
+        <!--User name field gets auto-generated here.-->
       </div></br></br>
       /*CURRENT-VIDEO-CONTENT*/
       </br></br>
