--- a/server/src/admin_dashboard_content/admin-dashboard-content.html
+++ b/server/src/admin_dashboard_content/admin-dashboard-content.html
@@ -6,9 +6,9 @@
     <script>/*SCRIPTS-CONTENT*/</script>
   </head>
   <body>
-    <h1>Bungle of the Year - 2023</h1>
-    <div class="pending">
-      <h2>Current Video: /*TITLE-CONTENT*/</h2>
+    <div class="caption">
+      <span class="border">Bungle of the Year - 2023</span></br>
+      <span class="border2"><b>Current Video:</b> /*TITLE-CONTENT*/</span>
       /*VIDEO-CONTENT*/
       </br>
       <button class="voteBtn" onclick="goToPrevVideo()">Previous</button>
