--- a/server/src/admin_dashboard_content/admin-dashboard-content.html
+++ b/server/src/admin_dashboard_content/admin-dashboard-content.html
@@ -8,7 +8,7 @@
   <body>
     <div class="caption">
       <span class="border">Bungle of the Year - 2023</span></br>
-      <span class="border2"><b>Current Video:</b> /*TITLE-CONTENT*/</span>
+      <span class="border2"><b>Current Video:</b> /*TITLE-CONTENT*/</span></br>
       /*VIDEO-CONTENT*/
       </br>
       <button class="voteBtn" onclick="goToPrevVideo()">Previous</button>
