Add leaderboard dashboard

--- a/server/src/admin_dashboard_content/admin-dashboard-content.html
+++ b/server/src/admin_dashboard_content/admin-dashboard-content.html
@@ -12,7 +12,8 @@
       /*VIDEO-CONTENT*/
       </br>
       <button class="voteBtn" onclick="goToPrevVideo()">Previous</button>
-      <button class="voteBtn" onclick="goToNextVideo()">Next</button></br>
+      <button class="voteBtn" onclick="goToNextVideo()">Next</button>
+      /*LEADERBOARD-CONTENT*/
     </div>
   </body>
 </html>
