Fix another minor issue with wording

--- a/server/src/food_dashboard_content/food-user-selection.html
+++ b/server/src/food_dashboard_content/food-user-selection.html
@@ -12,13 +12,13 @@
         <h1>Select or Enter Your Name</h1>
         <!-- Text Entry Field for User Name -->
         <div class="form-group">
-            <label for="userName">Enter Your Name:</label>
+            <label for="userName">First time here? Enter Your Name:</label>
             <input type="text" id="userName" name="userName" placeholder="Enter your name">
         </div>
 
         <!-- Dropdown Field for Selecting from Existing Attendees -->
         <div class="form-group">
-            <label for="attendeeSelect">Or Select Your Name from the List:</label>
+            <label for="attendeeSelect">Been here before? Select Your Name from the List:</label>
             <select id="attendeeSelect" name="attendeeSelect">
                 <option value="">-- Select your name --</option>
                 /*OPTIONS-CONTENT*/
