--- a/server/src/food_dashboard_content/food-dashboard-content.html
+++ b/server/src/food_dashboard_content/food-dashboard-content.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>/*STYLES-CONTENT*/</style>
     <script>/*SCRIPTS-CONTENT*/</script>
-    <title>Thanksgiving Meal Attendees and Entrees</title>
+    <title>Bacon Christmas Meal Attendees and Entrees</title>
 </head>
 <body>
     <div class="container">
-        <h1>Thanksgiving Meal Attendees and Entrees</h1>
+        <h1>Bacon Christmas Meal Attendees and Entrees</h1>
       /*TABLES-CONTENT*/
       <button type="login" onclick="onLoginPressed()">Log In</button>
     </div>
