--- a/server/src/food_dashboard_content/food-dashboard-content.html
+++ b/server/src/food_dashboard_content/food-dashboard-content.html
@@ -6,10 +6,12 @@
     <style>/*STYLES-CONTENT*/</style>
     <script>/*SCRIPTS-CONTENT*/</script>
     <title>Bacon Christmas Meal Attendees and Entrees</title>
+
 </head>
 <body>
     <div class="container">
-        <h1>Bacon Christmas Meal Attendees and Entrees</h1>
+        <h1>Bacon Christmas • Scotch Auction & Dinner</h1>
+        <h3>Sunday, December 30th at 3pm in Poland</h3>
       /*TABLES-CONTENT*/
       <button type="login" onclick="onLoginPressed()">Log In</button>
     </div>
