Update for Bacon summer picnic

--- a/server/src/food_dashboard_content/food-dashboard-content.html
+++ b/server/src/food_dashboard_content/food-dashboard-content.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bacon Christmas • Scotch Auction & Dinner</h1>
-        <h3>Sunday, December 29th at 3pm in Poland</h3>
+        <h1>Bacon Summer Picnic at Little Sebago</h1>
+        <h3>Saturday, July 12th at 12pm</h3>
       /*TABLES-CONTENT*/
       <button type="login" onclick="onLoginPressed()">Log In</button>
     </div>
