--- a/server/src/food_dashboard_content/food-dashboard-content.html
+++ b/server/src/food_dashboard_content/food-dashboard-content.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>/*STYLES-CONTENT*/</style>
     <script>/*SCRIPTS-CONTENT*/</script>
-    <title>Bacon Christmas Meal Attendees and Entrees</title>
+    <title>Bacon Summer Picnic at Little Sebago</title>
 
 </head>
 <body>
