--- a/server/src/food_dashboard_content/food-dashboard-content.html
+++ b/server/src/food_dashboard_content/food-dashboard-content.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>/*STYLES-CONTENT*/</style>
     <script>/*SCRIPTS-CONTENT*/</script>
-    <title>Bacon Summer Picnic at Little Sebago</title>
+    <title>Mosher Thanksgiving 2025</title>
 
 </head>
 <body>
     <div class="container">
-        <h1>Bacon Summer Picnic at Little Sebago</h1>
-        <h3>Saturday, July 12th at 12pm</h3>
+        <h1>Mosher Thanksgiving 2025</h1>
+        <h3>Thursday, November 27th - 12pm - Mosher Farm</h3>
       /*TABLES-CONTENT*/
       <button type="login" onclick="onLoginPressed()">Log In</button>
     </div>
