Update for Bacon Christmas

--- a/server/src/admin_dashboard_content/admin-dashboard-content.html
+++ b/server/src/admin_dashboard_content/admin-dashboard-content.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="caption">
-      <span class="border">Bungle of the Year - 2023</span></br>
+      <span class="border">Clip of the Year - 2025</span></br>
       <span class="border2"><b>Current Video:</b> /*TITLE-CONTENT*/</span></br>
       /*VIDEO-CONTENT*/
       </br>
