--- a/server/src/leaderboard_dashboard_content/leaderboard-dashboard-content.html
+++ b/server/src/leaderboard_dashboard_content/leaderboard-dashboard-content.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="caption">
-      <span class="border">Bungle of the Year - 2023 - Leaderboard</span><br>
+      <span class="border">Clip of the Year - 2025 - Leaderboard</span><br>
       <div id="nameContainer">
         <!--User name field gets auto-generated here.-->
       </div></br></br>
