--- a/server/src/dashboard_content/dashboard-content.html
+++ b/server/src/dashboard_content/dashboard-content.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="caption">
-      <span class="border">Bungle of the Year - 2023</span><br>
+      <span class="border">Clip of the Year - 2025</span><br>
       <div id="nameContainer">
         <!--User name field gets auto-generated here.-->
       </div></br></br>
